Fix navigation on smaller screen sizes

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -445,6 +445,10 @@ ul {
     margin: 1rem;
   }
 
+  .logo-column {
+    margin-right: 1rem;
+  }
+
   .checkout-image {
     height: 10rem;
     width: 10rem;
